image cropping fix

--- a/src/Components/ListEvents/listEvents.scss
+++ b/src/Components/ListEvents/listEvents.scss
@@ -101,12 +101,15 @@
     margin: 0 0 10px 0;
   }
   &__photo{
-    height: 150px;
+    height: 210px;
     margin: 0 0 10px 0;
     img{
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
+      @media (max-width: 768px) {
+        object-fit: contain;
+      }
     }
   }
   &__button-further{
